<?xml version="1.0"?>
<package format="2">
  <name>my_behaviortree</name>
  <version>0.0.0</version>
  <description>Dummy project to check compiling</description>
  <maintainer email="jakob@todo.todo">TBD</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>behaviortree_cpp</depend>

  <!-- <export>
    <build_type>catkin</build_type>
  </export> -->

</package>
